k8s/vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - name: vote-container
        image: donaemeka/vote:latest
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: vote-service
spec:
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 80
