k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 80
          - path: /vote
            pathType: Prefix
            backend:
              service:
                name: vote-service
                port:
                  number: 80
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: vote-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-service
                port:
                  number: 80
